--- a/css/style.css
+++ b/css/style.css
@@ -570,9 +570,9 @@ h1, h2, h3, h4, h5, h6, figure {
 
 #gtco-about .img-shadow {
     position: relative;
-    background: var(--primary-color-200);
+    background: var(--bg-color);
     width: 100%;
-    float: left;
+    float: right;
 }
 
 #gtco-about .img-shadow img {
@@ -733,8 +733,16 @@ h1, h2, h3, h4, h5, h6, figure {
     text-align: center;
     margin-bottom: 70px;
 }
+.heading2 {
+    text-align: left;
+    margin-bottom: 70px;
+    align-items: start;
+}
 
 .heading h1 {
+    margin-bottom: 10px;
+}
+.heading2 h1 {
     margin-bottom: 10px;
 }
 
@@ -742,16 +750,35 @@ h1, h2, h3, h4, h5, h6, figure {
     .heading h1 {
         font-size: 26px;
     }
+    .heading2 h1 {
+        font-size: 26px;
+    }
 }
 
 .heading .sub {
     position: relative;
-    padding-bottom: 40px;
+    padding-bottom: 5px;
+    font-size: 18px;
+    color: #757575;
+}
+.heading2 .sub {
+    position: relative;
+    padding-bottom: 5px;
     font-size: 18px;
     color: #757575;
 }
 
 .heading .sub:after {
+    bottom: 0;
+    left: 50%;
+    margin-left: -36px;
+    content: "";
+    position: absolute;
+    width: 72px;
+    height: 2px;
+    background: var(--primary-color-200);
+}
+.heading2 .sub:after {
     bottom: 0;
     left: 50%;
     margin-left: -36px;
@@ -1660,3 +1687,224 @@ form label {
     color: var(--bg-color);
     text-decoration: none;
 }
+
+/* Start Features Area css
+============================================================================================ */
+.features_area {
+    padding-bottom: 170px; }
+@media (max-width: 1199px) {
+    .features_area {
+        padding-bottom: 50px; } }
+
+.feature_item {
+    padding: 45px 25px;
+    text-align: center;
+    background: #f9f9fd;
+    cursor: pointer;
+    margin-bottom: 30px;
+    -webkit-transition: all 0.4s ease 0s;
+    -moz-transition: all 0.4s ease 0s;
+    -o-transition: all 0.4s ease 0s;
+    transition: all 0.4s ease 0s; }
+.feature_item img {
+    margin-bottom: 35px; }
+.feature_item h4 {
+    font-size: 20px;
+    margin-bottom: 20px;
+    text-transform: uppercase; }
+.feature_item p {
+    margin-bottom: 0; }
+.feature_item:hover {
+    box-shadow: 0 15px 30px rgba(77, 87, 222, 0.3);
+    background: #fff; }
+
+/* End Features Area css */
+/* Start Portfolio Area css
+============================================================================================ */
+.portfolio_area {
+    padding-bottom: 120px; }
+@media (max-width: 991px) {
+    .portfolio_area {
+        padding-bottom: 50px; } }
+.portfolio_area .filters ul {
+    padding-left: 0;
+    margin-bottom: 50px; }
+@media (max-width: 991px) {
+    .portfolio_area .filters ul {
+        margin-bottom: 20px; } }
+.portfolio_area .filters ul li {
+    display: inline-block;
+    margin-right: 50px;
+    font-size: 14px;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: #222222;
+    cursor: pointer;
+    -webkit-transition: all 0.4s ease 0s;
+    -moz-transition: all 0.4s ease 0s;
+    -o-transition: all 0.4s ease 0s;
+    transition: all 0.4s ease 0s; }
+.portfolio_area .filters ul li:hover, .portfolio_area .filters ul li.active {
+    color: var(--primary-color-200); }
+@media (max-width: 767px) {
+    .portfolio_area .filters ul li {
+        margin-right: 20px; } }
+
+.portfolio_box {
+    margin-bottom: 70px; }
+@media (max-width: 767px) {
+    .portfolio_box {
+        margin-bottom: 35px; } }
+.portfolio_box .short_info {
+    margin-top: 30px; }
+@media (max-width: 767px) {
+    .portfolio_box .short_info {
+        margin-top: 20px; } }
+.portfolio_box .short_info h4 {
+    text-transform: uppercase;
+    font-size: 20px;
+    margin-bottom: 0; }
+.portfolio_box .short_info h4 a {
+    color: #000000; }
+
+.single_portfolio {
+    position: relative; }
+.single_portfolio .overlay {
+    -webkit-transition: all 0.4s ease 0s;
+    -moz-transition: all 0.4s ease 0s;
+    -o-transition: all 0.4s ease 0s;
+    transition: all 0.4s ease 0s; }
+.single_portfolio .icon {
+    position: absolute;
+    top: 25%;
+    left: 25%;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    visibility: hidden;
+    -webkit-transition: all 0.4s ease 0s;
+    -moz-transition: all 0.4s ease 0s;
+    -o-transition: all 0.4s ease 0s;
+    transition: all 0.4s ease 0s; }
+.single_portfolio .icon span {
+    font-size: 100px;
+    display: inline-block;
+    -webkit-transform: rotate(135deg);
+    -moz-transform: rotate(135deg);
+    -ms-transform: rotate(135deg);
+    -o-transform: rotate(135deg);
+    transform: rotate(135deg);
+    color: #ffffff;
+    cursor: pointer; }
+.single_portfolio:hover .overlay {
+    background: rgba(77, 87, 222, 0.5); }
+.single_portfolio:hover .icon {
+    opacity: 1;
+    visibility: visible;
+    top: 50%;
+    left: 50%; }
+
+.portfolio_details_inner .row {
+    margin-bottom: 65px; }
+@media (max-width: 480px) {
+    .portfolio_details_inner .row {
+        margin-bottom: 30px; } }
+.portfolio_details_inner p {
+    margin-bottom: 30px;
+    font-size: 14px; }
+.portfolio_details_inner p:last-child {
+    margin-bottom: 0px; }
+.portfolio_details_inner .portfolio_right_text {
+    margin-top: 50px; }
+.portfolio_details_inner .portfolio_right_text h4 {
+    font-size: 20px;
+    margin-bottom: 18px; }
+.portfolio_details_inner .portfolio_right_text p {
+    margin-bottom: 25px;
+    font-size: 14px; }
+.portfolio_details_inner .portfolio_right_text .list li {
+    margin-bottom: 7px;
+    font-weight: normal;
+    font-size: 14px; }
+.portfolio_details_inner .portfolio_right_text .list li span {
+    font-family: "Rubik", sans-serif;
+    color: #000000;
+    font-size: 16px;
+    font-weight: 500;
+    width: 97px;
+    display: inline-block; }
+.portfolio_details_inner .portfolio_right_text .list li:last-child {
+    margin-bottom: 0; }
+.portfolio_details_inner .portfolio_right_text .list li i {
+    color: #f1cd09; }
+
+.img-fluid {
+    max-width: 100%;
+    height: auto
+}
+/* End Portfolio Area css
+============================================================================================ */
+/* Start Testimonial Area css
+============================================================================================ */
+.testimonial_area .owl-carousel .owl-dots {
+    display: block !important;
+    text-align: center; }
+.testimonial_area .owl-carousel .owl-dots .owl-dot {
+    height: 10px;
+    width: 10px;
+    background: #d8d8d8;
+    border-radius: 17px;
+    display: inline-block;
+    margin-right: 10px;
+    -webkit-transition: all 0.4s ease 0s;
+    -moz-transition: all 0.4s ease 0s;
+    -o-transition: all 0.4s ease 0s;
+    transition: all 0.4s ease 0s; }
+.testimonial_area .owl-carousel .owl-dots .owl-dot.active {
+    height: 12px;
+    width: 12px;
+    background: #854fee; }
+@media (max-width: 991px) {
+    .testimonial_area .owl-carousel .owl-dots {
+        display: none !important; } }
+.testimonial_area .owl-carousel .owl-item img {
+    width: auto !important; }
+
+.testi_item {
+    padding: 50px 55px;
+    margin-bottom: 200px;
+    margin-left: 10px;
+    margin: 0px 10px 80px;
+    box-shadow: 0px 15px 30px 0px rgba(221, 221, 221, 0.3);
+    -webkit-transition: all 0.4s ease 0s;
+    -moz-transition: all 0.4s ease 0s;
+    -o-transition: all 0.4s ease 0s;
+    transition: all 0.4s ease 0s; }
+@media (max-width: 991px) {
+    .testi_item {
+        margin-bottom: 0px; } }
+@media (max-width: 575px) {
+    .testi_item {
+        padding: 30px 20px; } }
+.testi_item img {
+    border-radius: 5px; }
+.testi_item .col-lg-8 {
+    vertical-align: middle;
+    align-self: center; }
+@media (max-width: 991px) {
+    .testi_item .testi_text {
+        margin-top: 50px; } }
+.testi_item .testi_text h4 {
+    font-size: 20px;
+    margin-bottom: 15px;
+    text-transform: uppercase; }
+.testi_item .testi_text p {
+    margin-bottom: 0px; }
+.testi_item:hover {
+    box-shadow: 0px 10px 20px 0px rgba(118, 85, 225, 0.1); }
+
+/* End Testimonial Area css
+============================================================================================ */
