--- a/css/style.css
+++ b/css/style.css
@@ -1523,7 +1523,7 @@ form label {
     -webkit-flex-grow: 1;
     -ms-flex-positive: 1;
     flex-grow: 1;
-    max-width: 550px;
+    /*max-width: 550px;*/
 }
 
 .header .header-content .header-title .up {
@@ -1548,6 +1548,7 @@ form label {
     opacity: .8;
     margin-top: -10px;
     margin-bottom: 20px;
+    color: #ffffff;
 }
 
 .header .header-content .btn {
